[TASK] General cleanup, String externalization, Section-refactoring.
- Implement TObjectComposite in every PropertySection.
- Add doxygen-documentation.
- Fix Checkstyle errors/warnings.
- Fix PMD errors/warnings with priority 1-3.
- Add package documentation.
- externalized strings from PropertySection's and Wizard
(tooltips, labels, error-messages)
- Delete unnessecary code, comments and blank lines.

Change-Id: Ib16e700a028a1f05be781d952df8d77fc9f4d52c